make-a-wish-salesforce/src/objects/Wish_Required_Signature__c.object
<CustomObject>
    <description>The Wish Required Signature stores information about signatures that are required (from a legal and/or logistical standpoint) for a wish to proceed. It is linked to the Wish (Case) and to the person signing the form (Contact). It includes information about the Wish Signature Form. It tracks the life-cycle of each signature: the date it is sent out to be signed, the date it is signed and received, and (if applicable) the date on which the signature changes from valid to invalid.</description>
    <fields>
        <fullName>Days_From_Signature_to_Expiry__c</fullName>
        <description>Days from Signature Date to Expiry Date, if Status is Signed and Signed Date is completed. Auto-populated from the Wish Signature Form.</description>
        <label>Days From Signature to Expiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Expiry__c</fullName>
        <description>This formula shows a number countdown of days from Signature Date to Expiry Date along with an indicator icon. This only shows if Status is Signed and Signed Date has a value.
Icon made by Smashicons from www.flaticon.com and is licensed by CC 3.0 BY.</description>
        <formula>IF((Text(Status__c)!= &quot;Completed&quot; &amp;&amp; Text(Status__c) != &quot;Signed&quot;) || ISBLANK(Signed_Date__c ),&quot;&quot;,
IF(Days_From_Signature_to_Expiry__c &lt; 0, &quot; Expired&quot;, 
IF(Days_From_Signature_to_Expiry__c &lt;= 30, TEXT( Signature_Expiry_Date__c - TODAY() ) &amp; &quot;!&quot;, TEXT( Signature_Expiry_Date__c - TODAY() )
)
)
)</formula>
        <inlineHelpText>Days until this signature expires. This only shows if Status is Signed and Signed Date has a value.</inlineHelpText>
        <label>Days to Expiry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Wish Required Signatures</relationshipLabel>
        <relationshipName>Wish_Required_Signatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiry_Warning__c</fullName>
        <description>Displays a warning icon with a yellow indicator when the signature expires in &lt;=30 days, and displays a different warning icon with a red indicator when the signature is expired. Note that these icons are the same as on the Case, but the case icons depend on the difference between the end date of the wish and the expiry date of the signature. This field does not take the wish end date into consideration.</description>
        <formula>IF( ISBLANK( Signature_Expiry_Date__c ) 
  &amp;&amp;
  (ISPICKVAL(Wish_Case__r.Status, &apos;Granted&apos;)
|| ISPICKVAL(Wish_Case__r.Status, &apos;Completed&apos;)
|| ISPICKVAL(Wish_Case__r.Status, &apos;Closed&apos;)),
&quot;&quot;, /*Do not show a warning if there is no expiry information on the Wish Required Signature, or if the case status is granted, completed, or closed*/

IF ( Signature_Expiry_Date__c - TODAY() &lt; 0, 
     IMAGE(&quot;/resource/icons/wish-clearance-expired.png&quot;, &quot;Signature expired&quot;, 48, 48),
     IF ( Signature_Expiry_Date__c - TODAY() &lt;= 30, 
          IMAGE(&quot;/resource/icons/wish-clearance-expiring-soon.png&quot;, &quot;Signature expiring soon&quot;, 48, 48) &amp; Days_to_Expiry__c,
          &quot;&quot;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows warning when this signature expires &lt;=30 days from today, or is already expired.</inlineHelpText>
        <label>Expiry Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <description>The delivery and signing method of the signature: either a paper form (printed from a PDF that is generated by Drawloop) or an electronic form (generated from DocuSign)</description>
        <inlineHelpText>The delivery and signing method of the signature.</inlineHelpText>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E-Signature</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_Fax_Cover_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prompts the inclusion of a fax cover sheet with the Drawloop template.</description>
        <label>Include Fax Cover Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Wish Signature Form associated with this record includes wish clearance. This field is manipulated with a workflow that stamps the value of the Is Clearance formula field onto this field so that this field can be used in rollups.</description>
        <label>Is Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Medical_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Wish Signature Form associated with this record includes the child&apos;s medical summary. This field is manipulated with a workflow that stamps the corresponding Is Medical Summary value of the Wish Signature Form onto this field so that this field can be used in rollups.</description>
        <label>Is Medical Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Wish_Required_Signature_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look ups up to the Primary Wish Required Signature record when multiple signatures are required for a single form.</description>
        <label>Primary Wish Req. Signature</label>
        <referenceTo>Wish_Required_Signature__c</referenceTo>
        <relationshipLabel>Linked Wish Required Signatures</relationshipLabel>
        <relationshipName>Wish_Required_Signatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <description>The date on which this signature was sent to the signer. Auto-populated by DocuSign if sent electronically; auto-populated by system if paper form is generated.</description>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_to_Email_Address__c</fullName>
        <description>For e-signature forms, the email address to which this form is sent for e-signature. In the Signature Tracker (Required Signatures tab on the Contact), the modal populates this field with the email address of the Contact on the selected Wish Affiliation. This field is editable in the modal, and the value entered in the modal gets saved to the Wish Required Signature record upon completion of the action chosen in the modal.</description>
        <inlineHelpText>For e-signature forms, the email address to which this form is sent for signature.</inlineHelpText>
        <label>Send to Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Signature_Expiry_Date__c</fullName>
        <description>The date on which this signature expires. Some forms are only valid for a certain amount of time before needing to be re-signed. This date is calculated by adding the number of days indicated in &quot;Days From Signature to Expiry&quot; to the &quot;Signed Date&quot;.</description>
        <formula>IF( ISBLANK(Days_From_Signature_to_Expiry__c), 
NULL,
Signed_Date__c  +  Days_From_Signature_to_Expiry__c
)</formula>
        <inlineHelpText>The date on which this signature expires and must be re-signed.  Calculated by adding the number of days in &quot;Days From Signature to Expiry&quot; to the &quot;Signed Date&quot;.</inlineHelpText>
        <label>Signature Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_Date__c</fullName>
        <description>The date on which this signature was signed. Auto-populated by DocuSign if received electronically; auto-populated by system if paper form is uploaded.</description>
        <label>Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signer__c</fullName>
        <description>The person who is signing this document, as indicated by the contact on the Wish Affiliation.</description>
        <formula>HYPERLINK (&quot;/&quot; &amp;  Wish_Affiliation__r.Contact__c, Wish_Affiliation__r.Contact__r.FirstName &amp; &quot; &quot; &amp;  Wish_Affiliation__r.Contact__r.LastName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To change this person, you must change the Wish Affiliation.</inlineHelpText>
        <label>Signer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The primary statuses for the WRS should be: not sent, sent, signed, voided, and expired. Note that some of these statuses come from DocuSign as per https://support.docusign.com/en/guides/ndse-user-guide-document-status.</description>
        <inlineHelpText>Primary statuses are: not sent, sent, signed, voided, and expired; the others are DocuSign statuses.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Delivery Failure</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <label>Signed</label>
                </value>
                <value>
                    <fullName>Not Sent - Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of signature required: medical or family (i.e. from a participant, family member or household member of the Wish Child). Auto-populated from the Wish Signature Form.</description>
        <inlineHelpText>Family forms are signed by a family member of the Wish Child or participant. Medical forms are signed by a designated medical professional.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wish_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related Wish Affiliation record</description>
        <label>Wish Affiliation</label>
        <referenceTo>Wish_Affiliation__c</referenceTo>
        <relationshipLabel>Wish Required Signatures</relationshipLabel>
        <relationshipName>Wish_Required_Signatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wish_Case__c</fullName>
        <description>The Wish (Case) to which this signature is applied.</description>
        <label>Wish Case</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Wish cases can be selected (e.g. Diagnosis Verification Review cases cannot be selected).</errorMessage>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wish</value>
            </filterItems>
            <infoMessage>Select the Wish case to which this signature applies.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Wish Required Signatures</relationshipLabel>
        <relationshipName>Wish_Required_Signatures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wish_Signature_Form_Name_Text__c</fullName>
        <description>Stores a record of the Wish Signature Form name, in case the parent is later deleted or updated after the form has been signed.</description>
        <inlineHelpText>Stores a record of the Wish Signature Form name, in case the parent is later deleted or updated after the form has been signed.</inlineHelpText>
        <label>Wish Signature Form Name (Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Signature_Form__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The related Wish Signature Form record.</description>
        <label>Wish Signature Form</label>
        <referenceTo>Wish_Signature_Forms__c</referenceTo>
        <relationshipLabel>Wish Required Signatures</relationshipLabel>
        <relationshipName>Wish_Required_Signatures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Wish Required Signature</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Wish_Signature_Form__c</columns>
        <columns>Signer__c</columns>
        <columns>Wish_Case__c</columns>
        <columns>Status__c</columns>
        <columns>Expiry_Warning__c</columns>
        <columns>Days_to_Expiry__c</columns>
        <columns>Signature_Expiry_Date__c</columns>
        <columns>Format__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WRS-{000000}</displayFormat>
        <label>Wish Required Signature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wish Required Signatures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>